# bgrules

./: .gitignore  README.md  pyproject.toml
api/: server.py
app/: agents.py  db.py  main.py  rag.py  scraper.py
bgrules/: __init__.py  agents.py  bgg.py  config.py  db.py  main.py  ollama.py  rag.py  scraper.py
bgrules/cache/: .cache_index.json
langflow/: flow.json
tests/: test_review_fixes.py
ui/: steamlit_app.py
